<resources>
    <string name="app_name">VideoCall</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate">Communicate</string>
    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="account">account</string>
    <string name="logout">Logout</string>
    <string name="made_in_with_opensource">Made in ❤️ with OpenSource</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="agora_app_id">80ef3a7a6b3d4483b98257a31d9b0eb8</string>
    <string name="join_video">Join Video</string>
    <string name="join_audio">Join Audio</string>
    <string name="joinchat">Join Chat</string>
</resources>