<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/message" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/feedback" />
        </menu>
    </item>

</menu>